--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "create-next-monorepo",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "CLI for creating a NX mono-repository based on the nx-next-starter project",
   "main": "index.js",
   "scripts": {
     "postinstall": "husky install",
+    "test-run": "cargo run test-project",
+    "build": "cargo build --release",
+    "publish": " npm publish --access public",
+    "clean": "rimraf nx-next-starter test-project target",
     "semantic-release": "semantic-relase --branches main"
   },
   "repository": {
@@ -26,7 +30,8 @@
     "@semantic-release/release-notes-generator": "^10.0.3",
     "conventional-commit-types": "^3.0.0",
     "cz-conventional-changelog": "^3.3.0",
-    "husky": "^8.0.3"
+    "husky": "^8.0.3",
+    "rimraf": "^4.1.2"
   },
   "bin": {
     "cli": "./index.js"
