--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "create-next-monorepo",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "CLI for creating a NX mono-repository based on the nx-next-starter project",
   "main": "index.js",
   "scripts": {
@@ -20,6 +20,15 @@
   "bugs": {
     "url": "https://github.com/J-Liciaga/create-next-monorepo/issues"
   },
+  "keywords": [
+    "Monorepo",
+    "NX",
+    "Typescript",
+    "Next.js",
+    "React-Native",
+    "React-Native-Web",
+    "Automation"
+  ],
   "homepage": "https://github.com/J-Liciaga/create-next-monorepo#readme",
   "devDependencies": {
     "@commitlint/cli": "^17.4.3",
