--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,24 +1,5 @@
-[workspace]
-members = [
-    "create-next-monorepo"
-]
-
-[profile.dev]
-opt-level = 0
-debug = true
-panic = "abort"
-
-[profile.test]
-opt-level = 0
-debug = true
-
-[profile.release]
-opt-level = 3
-debug = false
-panic = "unwind"
-lto = true
-codegen-units = 1
-strip = true
-
-[profile.bench]
-opt-level = 3
+[package]
+name = "create-next-monorepo"
+version = "0.0.3"
+edition = "2021"
+repository = "https://github.com/J-Liciaga/create-next-monorepo"
