fixing missing workflow

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -77,6 +77,9 @@ jobs:
           node-version: "16"
           registry-url: "https://registry.npmjs.org"
 
+      - name: Log in to NPM registry
+        run: echo "hello world!"
+
       - name: Publish to NPM
         shell: bash
         run: |
