--- a/npm/create-next-monorepo/package.json
+++ b/npm/create-next-monorepo/package.json
@@ -18,12 +18,12 @@
     "typescript": "^4.9.4"
   },
   "optionalDependencies": {
-    "create-next-monorepo-linux-x64": "0.0.1",
-    "create-next-monorepo-linux-arm64": "0.0.1",
-    "create-next-monorepo-darwin-x64": "0.0.1",
-    "create-next-monorepo-darwin-arm64": "0.0.1",
-    "create-next-monorepo-windows-x64": "0.0.1",
-    "create-next-monorepo-windows-arm64": "0.0.1"
+    "create-next-monorepo-linux-x64": "1.1.1-rc.1",
+    "create-next-monorepo-linux-arm64": "1.1.1-rc.1",
+    "create-next-monorepo-darwin-x64": "1.1.1-rc.1",
+    "create-next-monorepo-darwin-arm64": "1.1.1-rc.1",
+    "create-next-monorepo-windows-x64": "1.1.1-rc.1",
+    "create-next-monorepo-windows-arm64": "1.1.1-rc.1"
   },
   "repository": {
     "type": "git",
