--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -76,13 +76,13 @@ jobs:
         with:
           node-version: "16"
           registry-url: "https://registry.npmjs.org"
-        
+
       - name: Publish to NPM
         shell: bash
         run: |
           cd npm
           # set the binary name
-          bin="create-next-monorepo"
+          bin="app"
           # derive the OS and architecture from the build matrix name
           # note: when split by a hyphen, first part is the OS and the second is the architecture
           node_os=$(echo "${{ matrix.build.NAME }}" | cut -d '-' -f1)
@@ -110,7 +110,7 @@ jobs:
           cp "../target/${{ matrix.build.TARGET }}/release/${bin}" "${node_pkg}/bin"
           # publish the package
           cd "${node_pkg}"
-          npm publish --access public
+          npm publish --access public --dry-run
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
 
@@ -129,11 +129,12 @@ jobs:
           registry-url: "https://registry.npmjs.org"
 
       - name: Publish the package
+        continue-on-error: true
         shell: bash
         run: |
-          cd npm/create-next-monorepo
+          cd npm/app
           yarn install # requires optional dependencies to be present in the registry
           yarn build
-          npm publish --access public
+          npm publish --access public --dry-run
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
