--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -82,7 +82,7 @@ jobs:
         run: |
           cd npm
           # set the binary name
-          bin="app"
+          bin="create-next-monorepo"
           # derive the OS and architecture from the build matrix name
           # note: when split by a hyphen, first part is the OS and the second is the architecture
           node_os=$(echo "${{ matrix.build.NAME }}" | cut -d '-' -f1)
@@ -132,7 +132,7 @@ jobs:
         continue-on-error: true
         shell: bash
         run: |
-          cd npm/app
+          cd npm/create-next-monorepo
           yarn install # requires optional dependencies to be present in the registry
           yarn build
           npm publish --access public --dry-run
